<resources>
    <string name="app_name">Docs</string>
    <string name="title_task">Задачи</string>
    <string name="title_doc_in">Входящие</string>
    <string name="title_doc_out">Исходящие</string>
    <string name="title_doc_inner">Внутренние</string>
    <string name="title_activity_login">Авторизация</string>
    <string name="title_login">Имя пользователя</string>
    <string name="title_password">Пароль</string>
    <string name="title_auth">Войти</string>
    <string name="title_auth_error">Не верное имя пользователя или пароль</string>
    <string name="title_settings">Настройки</string>
    <string name="title_exit">Выход</string>
    <string name="title_reg_number">Рег. номер</string>
    <string name="title_reg_date">Рег. дата</string>
    <string name="void_string">(не указано)</string>
    <string name="title_description">Описание</string>
    <string name="title_status">Статус</string>
    <string name="title_author">Автор</string>
    <string name="title_recipient">Адресат</string>
    <string name="title_signer">Подписант</string>
    <string name="title_files">Файлы</string>
    <string name="title_more">Ещё</string>
    <string name="title_history">История</string>
    <string name="title_visa">Визы</string>
    <string name="title_resolution">Резолюции</string>
    <string name="title_mailer">Рассылка</string>
    <string name="title_executor">Исполнитель</string>
    <string name="title_date_due">Выполнить до</string>
    <string name="title_task_one">Задача</string>
    <string name="title_doc">Документ</string>
    <string name="title_apply">Утвердить</string>
    <string name="title_cancel">Отклонить</string>
    <string name="api_url">API URL</string>
    <string name="title_save">Сохранить</string>
</resources>
