<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_more_balck_24dp"
        android:title="@string/title_exit"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_history"
                android:icon="@drawable/ic_fab_history_24dp"
                android:title="@string/title_history"
                android:onClick="onHistoryClick"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/menu_apply"
                android:icon="@drawable/ic_fab_check_24dp"
                android:title="@string/title_apply"
                android:onClick="onApplyClick"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/menu_cancel"
                android:icon="@drawable/ic_fab_cancel_24dp"
                android:title="@string/title_cancel"
                android:onClick="onCancelClick"
                app:showAsAction="never"
                android:visible="false"
                />
        </menu>
    </item>
</menu>