<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp"
        android:animateLayoutChanges="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/title_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:padding="5dp"
                >

                <TextView
                    android:id="@+id/title_doc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="22sp"
                    android:text="@string/title_doc"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="5dp"
                    />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_doc"
                    android:textSize="18sp"
                    android:text="@string/void_string"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <TextView
                    android:id="@+id/title_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    android:textSize="18sp"
                    android:text="@string/title_reg_number"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/void_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/title_number"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:paddingTop="5dp"
                    android:gravity="end" />

                <TextView
                    android:id="@+id/title_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/number"
                    android:textSize="18sp"
                    android:text="@string/title_reg_date"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/void_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/title_date"
                    app:layout_constraintTop_toBottomOf="@id/number"
                    android:textSize="18sp"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="end" />

                <TextView
                    android:id="@+id/title_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/date"
                    android:textSize="18sp"
                    android:paddingTop="5dp"
                    android:text="@string/title_status"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/void_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/title_date"
                    app:layout_constraintTop_toBottomOf="@id/date"
                    android:textSize="18sp"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="end" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/description_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_card"
            android:layout_margin="5dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:padding="5dp"
                >

                <TextView
                    android:id="@+id/title_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="22sp"
                    android:text="@string/title_description"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="5dp"
                    />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_description"
                    android:textSize="18sp"
                    android:text="@string/void_string"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <TextView
                    android:id="@+id/title_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    android:textSize="18sp"
                    android:text="@string/title_author"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/void_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/title_author"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    android:textSize="18sp"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="end" />

                <TextView
                    android:id="@+id/title_recipient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/author"
                    android:textSize="18sp"
                    android:text="@string/title_recipient"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/recipient"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/void_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/title_recipient"
                    app:layout_constraintTop_toBottomOf="@id/author"
                    android:textSize="18sp"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="end" />

                <TextView
                    android:id="@+id/title_signer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recipient"
                    android:textSize="18sp"
                    android:text="@string/title_signer"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/signer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/void_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/title_signer"
                    app:layout_constraintTop_toBottomOf="@id/recipient"
                    android:textSize="18sp"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="end" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/files_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_card"
            android:layout_margin="5dp"
            android:onClick="onFilesClick"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:padding="5dp"
                android:animateLayoutChanges="true"
                >

                <TextView
                    android:id="@+id/title_files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="22sp"
                    android:text="@string/title_files"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="5dp" />

                <ImageView
                    android:id="@+id/image_files"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/void_string"
                    app:srcCompat="@drawable/ic_collapse_down_black_24dp"
                    android:animateLayoutChanges="true"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_files"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/more_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/files_card"
            android:layout_margin="5dp"
            android:onClick="onMoreClick"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/title_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="22sp"
                    android:text="@string/title_more"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="5dp" />

                <ImageView
                    android:id="@+id/image_more"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/void_string"
                    app:srcCompat="@drawable/ic_collapse_down_black_24dp" />

                <LinearLayout android:orientation="vertical"
                    android:id="@+id/more_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_more" >

                <Button
                    android:id="@+id/button_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"
                    android:text="@string/title_history"
                    android:textColor="@color/colorPrimary"
                    android:onClick="onHistoryClick">

                </Button>

                <Button
                    android:id="@+id/button_visa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/button_history"
                    tools:ignore="MissingConstraints"
                    android:text="@string/title_visa"
                    android:textColor="@color/colorPrimary"
                    android:onClick="onVisaClick">

                </Button>

                <Button
                    android:id="@+id/button_resolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/button_visa"
                    tools:ignore="MissingConstraints"
                    android:text="@string/title_resolution"
                    android:textColor="@color/colorPrimary"
                    android:onClick="onResolutionClick">

                </Button>

                <Button
                    android:id="@+id/button_mailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/button_resolution"
                    tools:ignore="MissingConstraints"
                    android:text="@string/title_mailer"
                    android:textColor="@color/colorPrimary"
                    android:onClick="onMailerClick">

                </Button>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>